Fix scanner bug with variable names with underscore, and loading bug

--- a/JadeEditor/assets/tmp.jade
+++ b/JadeEditor/assets/tmp.jade
@@ -8,8 +8,8 @@
             "Transform": {
                 "Entity": 0,
                 "Position": {
-                    "X": 522.841064453125,
-                    "Y": 158.49485778808594,
+                    "X": 662.5415649414063,
+                    "Y": 123.1939468383789,
                     "Z": 0.0
                 },
                 "Rotation": {
@@ -18,48 +18,8 @@
                     "Z": 0.0
                 },
                 "Scale": {
-                    "X": 1.0,
-                    "Y": 1.0,
-                    "Z": 1.0
-                }
-            }
-        },
-        {
-            "Transform": {
-                "Entity": 1,
-                "Position": {
-                    "X": 455.03778076171875,
-                    "Y": 16.425870895385742,
-                    "Z": 0.0
-                },
-                "Rotation": {
-                    "X": 0.0,
-                    "Y": 0.0,
-                    "Z": 0.0
-                },
-                "Scale": {
-                    "X": 1.0,
-                    "Y": 1.0,
-                    "Z": 1.0
-                }
-            }
-        },
-        {
-            "Transform": {
-                "Entity": 2,
-                "Position": {
-                    "X": 0.0,
-                    "Y": 0.0,
-                    "Z": 0.0
-                },
-                "Rotation": {
-                    "X": 0.0,
-                    "Y": 0.0,
-                    "Z": 0.0
-                },
-                "Scale": {
-                    "X": 1.0,
-                    "Y": 1.0,
+                    "X": 16.3599853515625,
+                    "Y": 15.804031372070313,
                     "Z": 1.0
                 }
             }
@@ -69,77 +29,22 @@
                 "AssetId": 4294967295,
                 "Color": {
                     "W": 1.0,
-                    "X": 1.0,
-                    "Y": 1.0,
-                    "Z": 1.0
+                    "X": 0.8666666746139526,
+                    "Y": 0.3745594024658203,
+                    "Z": 0.3745594024658203
                 },
                 "Entity": 0,
                 "ZIndex": 0
             }
         },
         {
-            "SpriteRenderer": {
-                "AssetId": 4294967295,
-                "Color": {
-                    "W": 1.0,
-                    "X": 1.0,
-                    "Y": 1.0,
-                    "Z": 1.0
-                },
-                "Entity": 1,
-                "ZIndex": 0
-            }
-        },
-        {
-            "SpriteRenderer": {
-                "AssetId": 4294967295,
-                "Color": {
-                    "W": 1.0,
-                    "X": 1.0,
-                    "Y": 1.0,
-                    "Z": 1.0
-                },
-                "Entity": 2,
-                "ZIndex": 0
-            }
-        },
-        {
-            "KillScript": {
-                "Entity": 1,
-                "mikeIsDead": 154,
-                "personIWantToKill": -91.0
-            }
-        },
-        {
-            "KillScript": {
+            "PlayerScript": {
                 "Entity": 0,
-                "mikeIsDead": -97,
-                "personIWantToKill": -398.0
-            }
-        },
-        {
-            "MyOtherClass": {
-                "Entity": 0,
-                "myOtherClassFloat": 3.140000104904175
-            }
-        },
-        {
-            "MyClass": {
-                "Entity": 0,
-                "anotherAnother": 20.0,
-                "anotherFloat": 10.0,
-                "someFloat": 0.0,
-                "someSortOfInt": 10
-            }
-        },
-        {
-            "FlowerScript": {
-                "Entity": 0,
-                "flowerFloats": 20.0,
-                "flowerIntsPower": 10
+                "m_PlayerDeathCount": 0,
+                "m_PlayerSpeed": 81.0
             }
         }
     ],
     "Project": "C:\\Users\\Gabe\\Documents\\Coding\\JadeProjects\\TestProject\\.jprj",
-    "Size": 11
+    "Size": 3
 }
