Fix some script bugs

--- a/CocoaEditor/assets/tmp.jade
+++ b/CocoaEditor/assets/tmp.jade
@@ -8,8 +8,8 @@
             "Transform": {
                 "Entity": 0,
                 "Position": {
-                    "X": 662.5415649414063,
-                    "Y": 123.1939468383789,
+                    "X": 0.0,
+                    "Y": 0.0,
                     "Z": 0.0
                 },
                 "Rotation": {
@@ -18,8 +18,8 @@
                     "Z": 0.0
                 },
                 "Scale": {
-                    "X": 16.3599853515625,
-                    "Y": 15.804031372070313,
+                    "X": 1.0,
+                    "Y": 1.0,
                     "Z": 1.0
                 }
             }
@@ -29,22 +29,22 @@
                 "AssetId": 4294967295,
                 "Color": {
                     "W": 1.0,
-                    "X": 0.8666666746139526,
-                    "Y": 0.3745594024658203,
-                    "Z": 0.3745594024658203
+                    "X": 0.9425287246704102,
+                    "Y": 0.0,
+                    "Z": 0.0
                 },
                 "Entity": 0,
                 "ZIndex": 0
             }
         },
         {
-            "PlayerScript": {
+            "DefaultScript": {
                 "Entity": 0,
-                "m_PlayerDeathCount": 0,
-                "m_PlayerSpeed": 81.0
+                "m_ExampleFloatProperty": 3.140000104904175,
+                "m_ExampleIntProperty": 10
             }
         }
     ],
-    "Project": "C:\\Users\\Gabe\\Documents\\Coding\\JadeProjects\\TestProject\\.jprj",
+    "Project": "C:\\Users\\Gabe\\Documents\\Coding\\JadeProjects\\New Jade Project\\New Jade Project.cprj",
     "Size": 3
 }
