Fix some more scripting bugs

--- a/CocoaEditor/assets/tmp.jade
+++ b/CocoaEditor/assets/tmp.jade
@@ -8,8 +8,8 @@
             "Transform": {
                 "Entity": 0,
                 "Position": {
-                    "X": 0.0,
-                    "Y": 0.0,
+                    "X": 365.8320007324219,
+                    "Y": 102.85714721679688,
                     "Z": 0.0
                 },
                 "Rotation": {
@@ -29,12 +29,19 @@
                 "AssetId": 4294967295,
                 "Color": {
                     "W": 1.0,
-                    "X": 0.9425287246704102,
-                    "Y": 0.0,
-                    "Z": 0.0
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
                 },
                 "Entity": 0,
                 "ZIndex": 0
+            }
+        },
+        {
+            "SecondScript": {
+                "Entity": 0,
+                "m_ExampleFloatProperty": 3.140000104904175,
+                "m_ExampleIntProperty": 10
             }
         },
         {
@@ -45,6 +52,6 @@
             }
         }
     ],
-    "Project": "C:\\Users\\Gabe\\Documents\\Coding\\JadeProjects\\New Jade Project\\New Jade Project.cprj",
-    "Size": 3
+    "Project": "C:\\Users\\Gabe\\Documents\\Coding\\JadeProjects\\TestProject\\TestProject.cprj",
+    "Size": 4
 }
