Add freetype as vendor and begin font util library

--- a/CocoaEditor/assets/tmp.jade
+++ b/CocoaEditor/assets/tmp.jade
@@ -1,6 +1,13 @@
 {
     "Assets": {
-        "AssetCount": 0,
+        "AssetCount": 1,
+        "AssetList": {
+            "1": {
+                "Filepath": "C:\\Users\\Gabe\\Documents\\Graphics\\GameAssets\\Free stuff\\catndog\\png\\dog\\Fall (7).png",
+                "ResourceId": 1,
+                "Type": 1
+            }
+        },
         "SceneID": 0
     },
     "Components": [
@@ -8,8 +15,8 @@
             "Transform": {
                 "Entity": 0,
                 "Position": {
-                    "X": 365.8320007324219,
-                    "Y": 102.85714721679688,
+                    "X": -221.08987426757813,
+                    "Y": 61.07142639160156,
                     "Z": 0.0
                 },
                 "Rotation": {
@@ -18,15 +25,15 @@
                     "Z": 0.0
                 },
                 "Scale": {
-                    "X": 1.0,
-                    "Y": 1.0,
+                    "X": 17.8601016998291,
+                    "Y": 14.50000286102295,
                     "Z": 1.0
                 }
             }
         },
         {
             "SpriteRenderer": {
-                "AssetId": 4294967295,
+                "AssetId": 1,
                 "Color": {
                     "W": 1.0,
                     "X": 1.0,
