--- a/CocoaEditor/assets/tmp.jade
+++ b/CocoaEditor/assets/tmp.jade
@@ -1,9 +1,14 @@
 {
     "Assets": {
-        "AssetCount": 1,
+        "AssetCount": 2,
         "AssetList": {
+            "0": {
+                "Filepath": "C:\\Users\\Gabe\\Documents\\Graphics\\GameAssets\\Free stuff\\catndog\\png\\dog\\Dead (1).png",
+                "ResourceId": 0,
+                "Type": 1
+            },
             "1": {
-                "Filepath": "C:\\Users\\Gabe\\Documents\\Graphics\\GameAssets\\Free stuff\\catndog\\png\\dog\\Fall (7).png",
+                "Filepath": "C:\\Users\\Gabe\\Documents\\Graphics\\GameAssets\\Free stuff\\catndog\\png\\dog\\Idle (4).png",
                 "ResourceId": 1,
                 "Type": 1
             }
@@ -15,8 +20,8 @@
             "Transform": {
                 "Entity": 0,
                 "Position": {
-                    "X": -221.08987426757813,
-                    "Y": 61.07142639160156,
+                    "X": -531.2518920898438,
+                    "Y": 30.53569793701172,
                     "Z": 0.0
                 },
                 "Rotation": {
@@ -32,6 +37,26 @@
             }
         },
         {
+            "Transform": {
+                "Entity": 1,
+                "Position": {
+                    "X": 631.4580078125,
+                    "Y": 56.2500114440918,
+                    "Z": 0.0
+                },
+                "Rotation": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "Scale": {
+                    "X": 26.131067276000977,
+                    "Y": 26.392858505249023,
+                    "Z": 1.0
+                }
+            }
+        },
+        {
             "SpriteRenderer": {
                 "AssetId": 1,
                 "Color": {
@@ -41,6 +66,19 @@
                     "Z": 1.0
                 },
                 "Entity": 0,
+                "ZIndex": 0
+            }
+        },
+        {
+            "SpriteRenderer": {
+                "AssetId": 2,
+                "Color": {
+                    "W": 1.0,
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                },
+                "Entity": 1,
                 "ZIndex": 0
             }
         },
@@ -60,5 +98,5 @@
         }
     ],
     "Project": "C:\\Users\\Gabe\\Documents\\Coding\\JadeProjects\\TestProject\\TestProject.cprj",
-    "Size": 4
+    "Size": 6
 }
