Fix asset id serialization issue

--- a/CocoaEditor/assets/tmp.jade
+++ b/CocoaEditor/assets/tmp.jade
@@ -1,15 +1,20 @@
 {
     "Assets": {
-        "AssetCount": 2,
+        "AssetCount": 3,
         "AssetList": {
-            "0": {
+            "1": {
                 "Filepath": "C:\\Users\\Gabe\\Documents\\Graphics\\GameAssets\\Free stuff\\catndog\\png\\dog\\Dead (1).png",
-                "ResourceId": 0,
+                "ResourceId": 1,
                 "Type": 1
             },
-            "1": {
-                "Filepath": "C:\\Users\\Gabe\\Documents\\Graphics\\GameAssets\\Free stuff\\catndog\\png\\dog\\Idle (4).png",
-                "ResourceId": 1,
+            "2": {
+                "Filepath": "C:\\Users\\Gabe\\Documents\\Graphics\\GameAssets\\Free stuff\\catndog\\png\\dog\\Dead (6).png",
+                "ResourceId": 2,
+                "Type": 1
+            },
+            "3": {
+                "Filepath": "C:\\Users\\Gabe\\Documents\\Graphics\\GameAssets\\Free stuff\\catndog\\png\\dog\\Idle (7).png",
+                "ResourceId": 3,
                 "Type": 1
             }
         },
@@ -57,6 +62,26 @@
             }
         },
         {
+            "Transform": {
+                "Entity": 2,
+                "Position": {
+                    "X": -203.5934600830078,
+                    "Y": -27.321487426757813,
+                    "Z": 0.0
+                },
+                "Rotation": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "Scale": {
+                    "X": 15.633284568786621,
+                    "Y": 16.107145309448242,
+                    "Z": 1.0
+                }
+            }
+        },
+        {
             "SpriteRenderer": {
                 "AssetId": 1,
                 "Color": {
@@ -71,7 +96,7 @@
         },
         {
             "SpriteRenderer": {
-                "AssetId": 2,
+                "AssetId": 3,
                 "Color": {
                     "W": 1.0,
                     "X": 1.0,
@@ -79,6 +104,19 @@
                     "Z": 1.0
                 },
                 "Entity": 1,
+                "ZIndex": 0
+            }
+        },
+        {
+            "SpriteRenderer": {
+                "AssetId": 2,
+                "Color": {
+                    "W": 1.0,
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                },
+                "Entity": 2,
                 "ZIndex": 0
             }
         },
@@ -98,5 +136,5 @@
         }
     ],
     "Project": "C:\\Users\\Gabe\\Documents\\Coding\\JadeProjects\\TestProject\\TestProject.cprj",
-    "Size": 6
+    "Size": 8
 }
