Add font renderer component

--- a/CocoaEditor/assets/tmp.jade
+++ b/CocoaEditor/assets/tmp.jade
@@ -1447,6 +1447,26 @@
             }
         },
         {
+            "Transform": {
+                "Entity": 3,
+                "Position": {
+                    "X": -287.8939208984375,
+                    "Y": 154.28570556640625,
+                    "Z": 0.0
+                },
+                "Rotation": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "Scale": {
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                }
+            }
+        },
+        {
             "SpriteRenderer": {
                 "AssetId": 1,
                 "Color": {
@@ -1482,6 +1502,34 @@
                     "Z": 1.0
                 },
                 "Entity": 2,
+                "ZIndex": 0
+            }
+        },
+        {
+            "SpriteRenderer": {
+                "AssetId": 4294967295,
+                "Color": {
+                    "W": 0.0,
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                },
+                "Entity": 3,
+                "ZIndex": 0
+            }
+        },
+        {
+            "FontRenderer": {
+                "AssetId": 0,
+                "Color": {
+                    "W": 1.0,
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 0.9607843160629272
+                },
+                "Entity": 3,
+                "FontSize": 226,
+                "Text": "Hello",
                 "ZIndex": 0
             }
         },
