Refactor script system into namespace

--- a/CocoaEditor/assets/tmp.jade
+++ b/CocoaEditor/assets/tmp.jade
@@ -2845,6 +2845,13 @@
                 "Text": "My Name is Gabe!",
                 "ZIndex": 0
             }
+        },
+        {
+            "DefaultScript": {
+                "Entity": 0,
+                "m_ExampleFloatProperty": -144.86000061035156,
+                "m_ExampleIntProperty": 10
+            }
         }
     ],
     "Project": "C:\\Users\\Gabe\\Documents\\Coding\\JadeProjects\\NewProject\\.cprj"
