Fixed some bugs in editor scripts

--- a/CocoaEditor/assets/tmp.jade
+++ b/CocoaEditor/assets/tmp.jade
@@ -2850,7 +2850,8 @@
             "DefaultScript": {
                 "Entity": 0,
                 "m_ExampleFloatProperty": 3.140000104904175,
-                "m_ExampleIntProperty": -95
+                "m_ExampleIntProperty": -69,
+                "m_NewExampleProperty": 20
             }
         }
     ],
