Remove picking texture and scene shaders

--- a/CocoaEditor/assets/tmp.jade
+++ b/CocoaEditor/assets/tmp.jade
@@ -2849,6 +2849,7 @@
         {
             "DefaultScript": {
                 "Entity": 0,
+                "m_ATest": 0.0,
                 "m_ExampleFloatProperty": 3.140000104904175,
                 "m_ExampleIntProperty": -69,
                 "m_NewExampleProperty": 20
