Fix gizmos to work with new projection matrix and use shapes instead of spritesheets

--- a/CocoaEditor/assets/tmp.jade
+++ b/CocoaEditor/assets/tmp.jade
@@ -2746,6 +2746,14 @@
                 "ResourceId": 2,
                 "WrapS": 1,
                 "WrapT": 1
+            },
+            {
+                "Filepath": "C:\\Users\\Gabe\\Documents\\Graphics\\GameAssets\\Free stuff\\deserttileset\\png\\Tile\\2.png",
+                "MagFilter": 2,
+                "MinFilter": 2,
+                "ResourceId": 3,
+                "WrapS": 1,
+                "WrapT": 1
             }
         ]
     },
@@ -2791,6 +2799,92 @@
             }
         },
         {
+            "Transform": {
+                "Entity": 2,
+                "Position": {
+                    "X": 0.07725350558757782,
+                    "Y": -1.1488438844680786,
+                    "Z": 0.0
+                },
+                "Rotation": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "Scale": {
+                    "X": 3.4325106143951416,
+                    "Y": 0.28381505608558655,
+                    "Z": 1.0
+                }
+            }
+        },
+        {
+            "Transform": {
+                "Entity": 3,
+                "Position": {
+                    "X": 0.10139426589012146,
+                    "Y": 0.5765895843505859,
+                    "Z": 0.0
+                },
+                "Rotation": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "Scale": {
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                }
+            }
+        },
+        {
+            "Rigidbody2D": {
+                "AngularDamping": 0.0,
+                "ContinousCollision": false,
+                "Entity": 3,
+                "FixedRotation": false,
+                "LinearDamping": 0.5,
+                "Mass": 27.0,
+                "Velocity": {
+                    "X": 0.0,
+                    "Y": 0.0
+                }
+            }
+        },
+        {
+            "Rigidbody2D": {
+                "AngularDamping": 0.0,
+                "ContinousCollision": false,
+                "Entity": 2,
+                "FixedRotation": false,
+                "LinearDamping": 0.5,
+                "Mass": 0.0,
+                "Velocity": {
+                    "X": 0.0,
+                    "Y": 0.0
+                }
+            }
+        },
+        {
+            "Box2D": {
+                "Entity": 3,
+                "HalfSize": {
+                    "X": 1.0,
+                    "Y": 1.0
+                }
+            }
+        },
+        {
+            "Box2D": {
+                "Entity": 2,
+                "HalfSize": {
+                    "X": 3.433000087738037,
+                    "Y": 0.2840000092983246
+                }
+            }
+        },
+        {
             "SpriteRenderer": {
                 "AssetId": 4294967295,
                 "Color": {
@@ -2807,12 +2901,38 @@
             "SpriteRenderer": {
                 "AssetId": 4294967295,
                 "Color": {
-                    "W": 0.0,
+                    "W": 1.0,
                     "X": 1.0,
                     "Y": 1.0,
                     "Z": 1.0
                 },
                 "Entity": 1,
+                "ZIndex": 0
+            }
+        },
+        {
+            "SpriteRenderer": {
+                "AssetId": 3,
+                "Color": {
+                    "W": 1.0,
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                },
+                "Entity": 2,
+                "ZIndex": 0
+            }
+        },
+        {
+            "SpriteRenderer": {
+                "AssetId": 4294967295,
+                "Color": {
+                    "W": 1.0,
+                    "X": 0.9529411792755127,
+                    "Y": 0.6000000238418579,
+                    "Z": 0.5843137502670288
+                },
+                "Entity": 3,
                 "ZIndex": 0
             }
         },
@@ -2844,15 +2964,6 @@
                 "FontSize": 153,
                 "Text": "My Name is Gabe!",
                 "ZIndex": 0
-            }
-        },
-        {
-            "DefaultScript": {
-                "Entity": 0,
-                "m_ATest": 0.0,
-                "m_ExampleFloatProperty": 3.140000104904175,
-                "m_ExampleIntProperty": 10,
-                "m_NewExampleProperty": 20
             }
         }
     ],
