Add serialization of editor camera

--- a/CocoaEditor/assets/tmp.jade
+++ b/CocoaEditor/assets/tmp.jade
@@ -13,8 +13,8 @@
                 },
                 "Parent": 1048575,
                 "Position": {
-                    "X": -0.6088685989379883,
-                    "Y": -3.1778931617736816,
+                    "X": -0.6156731247901917,
+                    "Y": -3.615510940551758,
                     "Z": 0.0
                 },
                 "Rotation": {
@@ -23,8 +23,8 @@
                     "Z": 0.0
                 },
                 "Scale": {
-                    "X": 10.0,
-                    "Y": 0.5,
+                    "X": 6.106097221374512,
+                    "Y": 0.41912418603897095,
                     "Z": 1.0
                 }
             }
@@ -39,8 +39,8 @@
                 },
                 "Parent": 1048575,
                 "Position": {
-                    "X": -1.7677879333496094,
-                    "Y": 0.788148045539856,
+                    "X": -1.4669525623321533,
+                    "Y": 0.02176487445831299,
                     "Z": 0.0
                 },
                 "Rotation": {
@@ -49,7 +49,7 @@
                     "Z": 0.0
                 },
                 "Scale": {
-                    "X": 1.0,
+                    "X": 0.4737114906311035,
                     "Y": 1.0,
                     "Z": 1.0
                 }
@@ -62,7 +62,7 @@
                 "Entity": 1048587,
                 "FixedRotation": false,
                 "LinearDamping": 0.5,
-                "Mass": 22.0,
+                "Mass": 28.0,
                 "Velocity": {
                     "X": 0.0,
                     "Y": 0.0
@@ -130,16 +130,57 @@
         {
             "Tag": {
                 "Entity": 1048586,
-                "Name": "New Entity"
+                "Name": "Ground"
             }
         },
         {
             "Tag": {
                 "Entity": 1048587,
-                "Name": "New Entity"
+                "Name": "Player"
+            }
+        },
+        {
+            "PlayerScript": {
+                "Entity": 1048587,
+                "PlayerSpeed": 10.0
             }
         }
     ],
+    "EditorCamera": {
+        "Aspect": 1.7777777910232544,
+        "Components": null,
+        "Fov": 45.0,
+        "ProjectionFarPlane": 100.0,
+        "ProjectionNearPlane": 0.5,
+        "ProjectionSize": {
+            "X": 6.0,
+            "Y": 3.0
+        },
+        "Transform": {
+            "LocalPosition": {
+                "X": 0.0,
+                "Y": 0.0,
+                "Z": 0.0
+            },
+            "Parent": 1048575,
+            "Position": {
+                "X": 0.8510950803756714,
+                "Y": -1.0049521923065186,
+                "Z": 0.0
+            },
+            "Rotation": {
+                "X": 0.0,
+                "Y": 0.0,
+                "Z": 0.0
+            },
+            "Scale": {
+                "X": 1.0,
+                "Y": 1.0,
+                "Z": 1.0
+            }
+        },
+        "Zoom": 2.3999993801116943
+    },
     "Project": "C:\\Users\\Gabe\\Documents\\Coding\\JadeProjects\\NewProject\\NewProject.cprj",
     "SceneHeirarchyOrder": [
         {
@@ -147,7 +188,7 @@
             "Index": 0,
             "IsOpen": true,
             "Level": 0,
-            "Selected": false
+            "Selected": true
         },
         {
             "Id": 1048586,
