Check in any changes

--- a/CocoaEditor/assets/tmp.jade
+++ b/CocoaEditor/assets/tmp.jade
@@ -188,7 +188,7 @@
             "Index": 0,
             "IsOpen": true,
             "Level": 0,
-            "Selected": true
+            "Selected": false
         },
         {
             "Id": 1048586,
