Remove all warnings 'and break entt'

--- a/CocoaEditor/assets/tmp.jade
+++ b/CocoaEditor/assets/tmp.jade
@@ -39,8 +39,8 @@
                 },
                 "Parent": 1048575,
                 "Position": {
-                    "X": -1.4669525623321533,
-                    "Y": 0.02176487445831299,
+                    "X": 1.1533749103546143,
+                    "Y": -0.12663400173187256,
                     "Z": 0.0
                 },
                 "Rotation": {
@@ -138,12 +138,6 @@
                 "Entity": 1048587,
                 "Name": "Player"
             }
-        },
-        {
-            "PlayerScript": {
-                "Entity": 1048587,
-                "PlayerSpeed": 10.0
-            }
         }
     ],
     "EditorCamera": {
@@ -188,7 +182,7 @@
             "Index": 0,
             "IsOpen": true,
             "Level": 0,
-            "Selected": false
+            "Selected": true
         },
         {
             "Id": 1048586,
