--- a/CocoaEditor/assets/tmp.jade
+++ b/CocoaEditor/assets/tmp.jade
@@ -18,7 +18,7 @@
                     "Z": 0.0
                 },
                 "Rotation": {
-                    "X": 0.0,
+                    "X": 31.0,
                     "Y": 0.0,
                     "Z": 0.0
                 },
@@ -39,8 +39,8 @@
                 },
                 "Parent": 1048575,
                 "Position": {
-                    "X": 1.1533749103546143,
-                    "Y": -0.12663400173187256,
+                    "X": -1.4669525623321533,
+                    "Y": 0.02176487445831299,
                     "Z": 0.0
                 },
                 "Rotation": {
@@ -62,7 +62,7 @@
                 "Entity": 1048587,
                 "FixedRotation": false,
                 "LinearDamping": 0.5,
-                "Mass": 28.0,
+                "Mass": 6.0,
                 "Velocity": {
                     "X": 0.0,
                     "Y": 0.0
@@ -137,6 +137,12 @@
             "Tag": {
                 "Entity": 1048587,
                 "Name": "Player"
+            }
+        },
+        {
+            "PlayerScript": {
+                "Entity": 1048587,
+                "PlayerSpeed": 904.0
             }
         }
     ],
