--- a/CocoaEditor/assets/tmp.jade
+++ b/CocoaEditor/assets/tmp.jade
@@ -13,8 +13,8 @@
                 },
                 "Parent": 1048575,
                 "Position": {
-                    "X": -0.6156731247901917,
-                    "Y": -3.615510940551758,
+                    "X": 0.8955097794532776,
+                    "Y": -4.267094612121582,
                     "Z": 0.0
                 },
                 "Rotation": {
@@ -23,8 +23,8 @@
                     "Z": 0.0
                 },
                 "Scale": {
-                    "X": 6.106097221374512,
-                    "Y": 0.41912418603897095,
+                    "X": 14.66324234008789,
+                    "Y": 1.7389719486236572,
                     "Z": 1.0
                 }
             }
@@ -56,11 +56,167 @@
             }
         },
         {
+            "Transform": {
+                "Entity": 5,
+                "LocalPosition": {
+                    "X": 4.795316219329834,
+                    "Y": -3.212813377380371,
+                    "Z": 0.0
+                },
+                "Parent": 4,
+                "Position": {
+                    "X": 4.795316219329834,
+                    "Y": -3.212813377380371,
+                    "Z": 0.0
+                },
+                "Rotation": {
+                    "X": 31.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "Scale": {
+                    "X": 9.300002098083496,
+                    "Y": 0.42928507924079895,
+                    "Z": 1.0
+                }
+            }
+        },
+        {
+            "Transform": {
+                "Entity": 1048582,
+                "LocalPosition": {
+                    "X": 5.402122974395752,
+                    "Y": -2.816650390625,
+                    "Z": 0.0
+                },
+                "Parent": 4,
+                "Position": {
+                    "X": 5.402122974395752,
+                    "Y": -2.816650390625,
+                    "Z": 0.0
+                },
+                "Rotation": {
+                    "X": 31.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "Scale": {
+                    "X": 9.300002098083496,
+                    "Y": 0.42928507924079895,
+                    "Z": 1.0
+                }
+            }
+        },
+        {
+            "Transform": {
+                "Entity": 1048583,
+                "LocalPosition": {
+                    "X": 5.997261047363281,
+                    "Y": -2.39963698387146,
+                    "Z": 0.0
+                },
+                "Parent": 4,
+                "Position": {
+                    "X": 5.997261047363281,
+                    "Y": -2.39963698387146,
+                    "Z": 0.0
+                },
+                "Rotation": {
+                    "X": 31.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "Scale": {
+                    "X": 9.300002098083496,
+                    "Y": 0.42928507924079895,
+                    "Z": 1.0
+                }
+            }
+        },
+        {
+            "Transform": {
+                "Entity": 1048584,
+                "LocalPosition": {
+                    "X": 6.784943580627441,
+                    "Y": -2.0503885746002197,
+                    "Z": 0.0
+                },
+                "Parent": 4,
+                "Position": {
+                    "X": 6.784943580627441,
+                    "Y": -2.0503885746002197,
+                    "Z": 0.0
+                },
+                "Rotation": {
+                    "X": 31.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "Scale": {
+                    "X": 9.300002098083496,
+                    "Y": 0.42928507924079895,
+                    "Z": 1.0
+                }
+            }
+        },
+        {
+            "Transform": {
+                "Entity": 1048585,
+                "LocalPosition": {
+                    "X": 7.43259334564209,
+                    "Y": -1.6490131616592407,
+                    "Z": 0.0
+                },
+                "Parent": 4,
+                "Position": {
+                    "X": 7.43259334564209,
+                    "Y": -1.6490131616592407,
+                    "Z": 0.0
+                },
+                "Rotation": {
+                    "X": 31.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "Scale": {
+                    "X": 9.300002098083496,
+                    "Y": 0.42928507924079895,
+                    "Z": 1.0
+                }
+            }
+        },
+        {
+            "Transform": {
+                "Entity": 4,
+                "LocalPosition": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "Parent": 1048575,
+                "Position": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "Rotation": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "Scale": {
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                }
+            }
+        },
+        {
             "Rigidbody2D": {
                 "AngularDamping": 0.0,
                 "ContinousCollision": false,
                 "Entity": 1048587,
-                "FixedRotation": false,
+                "FixedRotation": true,
                 "LinearDamping": 0.5,
                 "Mass": 6.0,
                 "Velocity": {
@@ -74,6 +230,76 @@
                 "AngularDamping": 0.0,
                 "ContinousCollision": false,
                 "Entity": 1048586,
+                "FixedRotation": false,
+                "LinearDamping": 0.5,
+                "Mass": 0.0,
+                "Velocity": {
+                    "X": 0.0,
+                    "Y": 0.0
+                }
+            }
+        },
+        {
+            "Rigidbody2D": {
+                "AngularDamping": 0.0,
+                "ContinousCollision": false,
+                "Entity": 5,
+                "FixedRotation": false,
+                "LinearDamping": 0.5,
+                "Mass": 0.0,
+                "Velocity": {
+                    "X": 0.0,
+                    "Y": 0.0
+                }
+            }
+        },
+        {
+            "Rigidbody2D": {
+                "AngularDamping": 0.0,
+                "ContinousCollision": false,
+                "Entity": 1048582,
+                "FixedRotation": false,
+                "LinearDamping": 0.5,
+                "Mass": 0.0,
+                "Velocity": {
+                    "X": 0.0,
+                    "Y": 0.0
+                }
+            }
+        },
+        {
+            "Rigidbody2D": {
+                "AngularDamping": 0.0,
+                "ContinousCollision": false,
+                "Entity": 1048583,
+                "FixedRotation": false,
+                "LinearDamping": 0.5,
+                "Mass": 0.0,
+                "Velocity": {
+                    "X": 0.0,
+                    "Y": 0.0
+                }
+            }
+        },
+        {
+            "Rigidbody2D": {
+                "AngularDamping": 0.0,
+                "ContinousCollision": false,
+                "Entity": 1048584,
+                "FixedRotation": false,
+                "LinearDamping": 0.5,
+                "Mass": 0.0,
+                "Velocity": {
+                    "X": 0.0,
+                    "Y": 0.0
+                }
+            }
+        },
+        {
+            "Rigidbody2D": {
+                "AngularDamping": 0.0,
+                "ContinousCollision": false,
+                "Entity": 1048585,
                 "FixedRotation": false,
                 "LinearDamping": 0.5,
                 "Mass": 0.0,
@@ -102,13 +328,58 @@
             }
         },
         {
+            "Box2D": {
+                "Entity": 5,
+                "HalfSize": {
+                    "X": 0.5,
+                    "Y": 0.5
+                }
+            }
+        },
+        {
+            "Box2D": {
+                "Entity": 1048582,
+                "HalfSize": {
+                    "X": 0.5,
+                    "Y": 0.5
+                }
+            }
+        },
+        {
+            "Box2D": {
+                "Entity": 1048583,
+                "HalfSize": {
+                    "X": 0.5,
+                    "Y": 0.5
+                }
+            }
+        },
+        {
+            "Box2D": {
+                "Entity": 1048584,
+                "HalfSize": {
+                    "X": 0.5,
+                    "Y": 0.5
+                }
+            }
+        },
+        {
+            "Box2D": {
+                "Entity": 1048585,
+                "HalfSize": {
+                    "X": 0.5,
+                    "Y": 0.5
+                }
+            }
+        },
+        {
             "SpriteRenderer": {
                 "AssetId": 4294967295,
                 "Color": {
                     "W": 1.0,
-                    "X": 0.6823529601097107,
-                    "Y": 1.0,
-                    "Z": 1.0
+                    "X": 0.18213766813278198,
+                    "Y": 0.25977009534835815,
+                    "Z": 0.25977009534835815
                 },
                 "Entity": 1048586,
                 "ZIndex": 0
@@ -128,6 +399,84 @@
             }
         },
         {
+            "SpriteRenderer": {
+                "AssetId": 4294967295,
+                "Color": {
+                    "W": 1.0,
+                    "X": 0.18213766813278198,
+                    "Y": 0.25977009534835815,
+                    "Z": 0.25977009534835815
+                },
+                "Entity": 5,
+                "ZIndex": 0
+            }
+        },
+        {
+            "SpriteRenderer": {
+                "AssetId": 4294967295,
+                "Color": {
+                    "W": 1.0,
+                    "X": 0.18213766813278198,
+                    "Y": 0.25977009534835815,
+                    "Z": 0.25977009534835815
+                },
+                "Entity": 1048582,
+                "ZIndex": 0
+            }
+        },
+        {
+            "SpriteRenderer": {
+                "AssetId": 4294967295,
+                "Color": {
+                    "W": 1.0,
+                    "X": 0.18213766813278198,
+                    "Y": 0.25977009534835815,
+                    "Z": 0.25977009534835815
+                },
+                "Entity": 1048583,
+                "ZIndex": 0
+            }
+        },
+        {
+            "SpriteRenderer": {
+                "AssetId": 4294967295,
+                "Color": {
+                    "W": 1.0,
+                    "X": 0.18213766813278198,
+                    "Y": 0.25977009534835815,
+                    "Z": 0.25977009534835815
+                },
+                "Entity": 1048584,
+                "ZIndex": 0
+            }
+        },
+        {
+            "SpriteRenderer": {
+                "AssetId": 4294967295,
+                "Color": {
+                    "W": 1.0,
+                    "X": 0.18213766813278198,
+                    "Y": 0.25977009534835815,
+                    "Z": 0.25977009534835815
+                },
+                "Entity": 1048585,
+                "ZIndex": 0
+            }
+        },
+        {
+            "SpriteRenderer": {
+                "AssetId": 4294967295,
+                "Color": {
+                    "W": 0.0,
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                },
+                "Entity": 4,
+                "ZIndex": 0
+            }
+        },
+        {
             "Tag": {
                 "Entity": 1048586,
                 "Name": "Ground"
@@ -140,9 +489,46 @@
             }
         },
         {
+            "Tag": {
+                "Entity": 5,
+                "Name": "Stair 1"
+            }
+        },
+        {
+            "Tag": {
+                "Entity": 1048582,
+                "Name": "Stair 2"
+            }
+        },
+        {
+            "Tag": {
+                "Entity": 1048583,
+                "Name": "Stair 3"
+            }
+        },
+        {
+            "Tag": {
+                "Entity": 1048584,
+                "Name": "Stair 4"
+            }
+        },
+        {
+            "Tag": {
+                "Entity": 1048585,
+                "Name": "Stair 5"
+            }
+        },
+        {
+            "Tag": {
+                "Entity": 4,
+                "Name": "Stairs"
+            }
+        },
+        {
             "PlayerScript": {
                 "Entity": 1048587,
-                "PlayerSpeed": 904.0
+                "PlayerJumpBoost": 60.0,
+                "PlayerSpeed": 35.0
             }
         }
     ],
@@ -164,8 +550,8 @@
             },
             "Parent": 1048575,
             "Position": {
-                "X": 0.8510950803756714,
-                "Y": -1.0049521923065186,
+                "X": 0.6000773310661316,
+                "Y": -0.6336098313331604,
                 "Z": 0.0
             },
             "Rotation": {
@@ -179,22 +565,64 @@
                 "Z": 1.0
             }
         },
-        "Zoom": 2.3999993801116943
+        "Zoom": 2.249999523162842
     },
-    "Project": "C:\\Users\\Gabe\\Documents\\Coding\\JadeProjects\\NewProject\\NewProject.cprj",
+    "Project": "C:\\Users\\Gabe\\Documents\\Coding\\CocoaProjects\\NewProject\\NewProject.cprj",
     "SceneHeirarchyOrder": [
         {
             "Id": 1048587,
             "Index": 0,
             "IsOpen": true,
             "Level": 0,
-            "Selected": true
+            "Selected": false
         },
         {
             "Id": 1048586,
             "Index": 1,
             "IsOpen": true,
             "Level": 0,
+            "Selected": false
+        },
+        {
+            "Id": 4,
+            "Index": 2,
+            "IsOpen": false,
+            "Level": 0,
+            "Selected": false
+        },
+        {
+            "Id": 5,
+            "Index": 3,
+            "IsOpen": true,
+            "Level": 1,
+            "Selected": false
+        },
+        {
+            "Id": 1048582,
+            "Index": 4,
+            "IsOpen": true,
+            "Level": 1,
+            "Selected": false
+        },
+        {
+            "Id": 1048583,
+            "Index": 5,
+            "IsOpen": true,
+            "Level": 1,
+            "Selected": false
+        },
+        {
+            "Id": 1048584,
+            "Index": 6,
+            "IsOpen": true,
+            "Level": 1,
+            "Selected": false
+        },
+        {
+            "Id": 1048585,
+            "Index": 7,
+            "IsOpen": true,
+            "Level": 1,
             "Selected": false
         }
     ]
