Add physics contact listener, and more physics methods

--- a/CocoaEditor/assets/tmp.jade
+++ b/CocoaEditor/assets/tmp.jade
@@ -491,37 +491,44 @@
         {
             "Tag": {
                 "Entity": 5,
-                "Name": "Stair 1"
+                "Name": "Ground"
             }
         },
         {
             "Tag": {
                 "Entity": 1048582,
-                "Name": "Stair 2"
+                "Name": "Ground"
             }
         },
         {
             "Tag": {
                 "Entity": 1048583,
-                "Name": "Stair 3"
+                "Name": "Ground"
             }
         },
         {
             "Tag": {
                 "Entity": 1048584,
-                "Name": "Stair 4"
+                "Name": "Ground"
             }
         },
         {
             "Tag": {
                 "Entity": 1048585,
-                "Name": "Stair 5"
+                "Name": "Ground"
             }
         },
         {
             "Tag": {
                 "Entity": 4,
                 "Name": "Stairs"
+            }
+        },
+        {
+            "PlayerScript": {
+                "Entity": 1048587,
+                "PlayerJumpBoost": 80.0,
+                "PlayerSpeed": 10.0
             }
         }
     ],
@@ -543,8 +550,8 @@
             },
             "Parent": 1048575,
             "Position": {
-                "X": 1.3613619804382324,
-                "Y": -0.5613551139831543,
+                "X": 0.9316321611404419,
+                "Y": -0.9537382125854492,
                 "Z": 0.0
             },
             "Rotation": {
@@ -567,7 +574,7 @@
             "Index": 0,
             "IsOpen": true,
             "Level": 0,
-            "Selected": false
+            "Selected": true
         },
         {
             "Id": 1048586,
@@ -579,7 +586,7 @@
         {
             "Id": 4,
             "Index": 2,
-            "IsOpen": false,
+            "IsOpen": true,
             "Level": 0,
             "Selected": false
         },
