Fix game viewport size issues

--- a/CocoaEditor/assets/tmp.jade
+++ b/CocoaEditor/assets/tmp.jade
@@ -11,6 +11,16 @@
                     "Y": 0.0,
                     "Z": 0.0
                 },
+                "LocalRotation": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "LocalScale": {
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                },
                 "Parent": 1048575,
                 "Position": {
                     "X": 0.8955097794532776,
@@ -37,6 +47,16 @@
                     "Y": 0.0,
                     "Z": 0.0
                 },
+                "LocalRotation": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "LocalScale": {
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                },
                 "Parent": 1048575,
                 "Position": {
                     "X": -1.4669525623321533,
@@ -59,25 +79,35 @@
             "Transform": {
                 "Entity": 5,
                 "LocalPosition": {
-                    "X": 4.795316219329834,
-                    "Y": -3.212813377380371,
+                    "X": 4.525426864624023,
+                    "Y": -3.4657251834869385,
                     "Z": 0.0
+                },
+                "LocalRotation": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "LocalScale": {
+                    "X": 1.0000004768371582,
+                    "Y": 1.0,
+                    "Z": 1.0
                 },
                 "Parent": 4,
                 "Position": {
-                    "X": 4.795316219329834,
+                    "X": 5.534577369689941,
                     "Y": -3.212813377380371,
                     "Z": 0.0
                 },
                 "Rotation": {
-                    "X": 31.0,
+                    "X": 0.0,
                     "Y": 0.0,
                     "Z": 0.0
                 },
                 "Scale": {
-                    "X": 9.300002098083496,
-                    "Y": 0.42928507924079895,
-                    "Z": 1.0
+                    "X": 6.384649276733398,
+                    "Y": 0.7523021697998047,
+                    "Z": 2.0
                 }
             }
         },
@@ -86,24 +116,34 @@
                 "Entity": 1048582,
                 "LocalPosition": {
                     "X": 5.402122974395752,
-                    "Y": -2.816650390625,
+                    "Y": -2.763960361480713,
                     "Z": 0.0
+                },
+                "LocalRotation": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "LocalScale": {
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
                 },
                 "Parent": 4,
                 "Position": {
-                    "X": 5.402122974395752,
-                    "Y": -2.816650390625,
+                    "X": 6.411273956298828,
+                    "Y": -2.5110485553741455,
                     "Z": 0.0
                 },
                 "Rotation": {
-                    "X": 31.0,
+                    "X": 0.0,
                     "Y": 0.0,
                     "Z": 0.0
                 },
                 "Scale": {
-                    "X": 9.300002098083496,
-                    "Y": 0.42928507924079895,
-                    "Z": 1.0
+                    "X": 6.38464879989624,
+                    "Y": 0.7523021697998047,
+                    "Z": 2.0
                 }
             }
         },
@@ -111,25 +151,35 @@
             "Transform": {
                 "Entity": 1048583,
                 "LocalPosition": {
-                    "X": 5.997261047363281,
-                    "Y": -2.39963698387146,
+                    "X": 6.185009956359863,
+                    "Y": -2.2310290336608887,
                     "Z": 0.0
+                },
+                "LocalRotation": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "LocalScale": {
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
                 },
                 "Parent": 4,
                 "Position": {
-                    "X": 5.997261047363281,
-                    "Y": -2.39963698387146,
+                    "X": 7.194160461425781,
+                    "Y": -1.9781172275543213,
                     "Z": 0.0
                 },
                 "Rotation": {
-                    "X": 31.0,
+                    "X": 0.0,
                     "Y": 0.0,
                     "Z": 0.0
                 },
                 "Scale": {
-                    "X": 9.300002098083496,
-                    "Y": 0.42928507924079895,
-                    "Z": 1.0
+                    "X": 6.38464879989624,
+                    "Y": 0.7523021697998047,
+                    "Z": 2.0
                 }
             }
         },
@@ -137,25 +187,35 @@
             "Transform": {
                 "Entity": 1048584,
                 "LocalPosition": {
-                    "X": 6.784943580627441,
-                    "Y": -2.0503885746002197,
+                    "X": 6.914021015167236,
+                    "Y": -1.6604831218719482,
                     "Z": 0.0
+                },
+                "LocalRotation": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "LocalScale": {
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
                 },
                 "Parent": 4,
                 "Position": {
-                    "X": 6.784943580627441,
-                    "Y": -2.0503885746002197,
+                    "X": 7.9231719970703125,
+                    "Y": -1.4075713157653809,
                     "Z": 0.0
                 },
                 "Rotation": {
-                    "X": 31.0,
+                    "X": 0.0,
                     "Y": 0.0,
                     "Z": 0.0
                 },
                 "Scale": {
-                    "X": 9.300002098083496,
-                    "Y": 0.42928507924079895,
-                    "Z": 1.0
+                    "X": 6.38464879989624,
+                    "Y": 0.7523021697998047,
+                    "Z": 2.0
                 }
             }
         },
@@ -163,25 +223,35 @@
             "Transform": {
                 "Entity": 1048585,
                 "LocalPosition": {
-                    "X": 7.43259334564209,
-                    "Y": -1.6490131616592407,
+                    "X": 7.819825172424316,
+                    "Y": -0.95350581407547,
                     "Z": 0.0
+                },
+                "LocalRotation": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "LocalScale": {
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
                 },
                 "Parent": 4,
                 "Position": {
-                    "X": 7.43259334564209,
-                    "Y": -1.6490131616592407,
+                    "X": 8.828975677490234,
+                    "Y": -0.7005940079689026,
                     "Z": 0.0
                 },
                 "Rotation": {
-                    "X": 31.0,
+                    "X": 0.0,
                     "Y": 0.0,
                     "Z": 0.0
                 },
                 "Scale": {
-                    "X": 9.300002098083496,
-                    "Y": 0.42928507924079895,
-                    "Z": 1.0
+                    "X": 6.38464879989624,
+                    "Y": 0.7523021697998047,
+                    "Z": 2.0
                 }
             }
         },
@@ -193,10 +263,20 @@
                     "Y": 0.0,
                     "Z": 0.0
                 },
-                "Parent": 1048575,
-                "Position": {
+                "LocalRotation": {
                     "X": 0.0,
                     "Y": 0.0,
+                    "Z": 0.0
+                },
+                "LocalScale": {
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                },
+                "Parent": 1048575,
+                "Position": {
+                    "X": 1.009150743484497,
+                    "Y": 0.2529118061065674,
                     "Z": 0.0
                 },
                 "Rotation": {
@@ -205,8 +285,8 @@
                     "Z": 0.0
                 },
                 "Scale": {
-                    "X": 1.0,
-                    "Y": 1.0,
+                    "X": 5.38464879989624,
+                    "Y": -0.2476978302001953,
                     "Z": 1.0
                 }
             }
@@ -218,7 +298,7 @@
                 "Entity": 1048587,
                 "FixedRotation": true,
                 "LinearDamping": 0.5,
-                "Mass": 6.0,
+                "Mass": 60.0,
                 "Velocity": {
                     "X": 0.0,
                     "Y": 0.0
@@ -527,8 +607,8 @@
         {
             "PlayerScript": {
                 "Entity": 1048587,
-                "PlayerJumpBoost": 80.0,
-                "PlayerSpeed": 10.0
+                "PlayerJumpBoost": 10.0,
+                "PlayerSpeed": 200.0
             }
         }
     ],
@@ -591,35 +671,35 @@
             "Selected": false
         },
         {
-            "Id": 5,
+            "Id": 1048582,
             "Index": 3,
             "IsOpen": true,
             "Level": 1,
             "Selected": false
         },
         {
-            "Id": 1048582,
+            "Id": 1048583,
             "Index": 4,
             "IsOpen": true,
             "Level": 1,
             "Selected": false
         },
         {
-            "Id": 1048583,
+            "Id": 1048584,
             "Index": 5,
             "IsOpen": true,
             "Level": 1,
             "Selected": false
         },
         {
-            "Id": 1048584,
+            "Id": 1048585,
             "Index": 6,
             "IsOpen": true,
             "Level": 1,
             "Selected": false
         },
         {
-            "Id": 1048585,
+            "Id": 5,
             "Index": 7,
             "IsOpen": true,
             "Level": 1,
