Fix bug with finding out if editor window is focused

--- a/CocoaEditor/assets/tmp.jade
+++ b/CocoaEditor/assets/tmp.jade
@@ -607,7 +607,7 @@
         {
             "PlayerScript": {
                 "Entity": 1048587,
-                "PlayerJumpBoost": 10.0,
+                "PlayerJumpBoost": 42.0,
                 "PlayerSpeed": 200.0
             }
         }
@@ -654,7 +654,7 @@
             "Index": 0,
             "IsOpen": true,
             "Level": 0,
-            "Selected": true
+            "Selected": false
         },
         {
             "Id": 1048586,
